# gtm-experimentation-tool

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/gxt/: __init__.py  main.py
src/gxt/adapters/: __init__.py  base.py  bigquery.py
src/gxt/commands/: __init__.py  compile.py  init.py  list.py  new_experiment.py  run.py  validate.py
src/gxt/parser/: __init__.py  manifest.py
src/gxt/templates/: audience.sql  config.yml.jinja  profiles.yml.jinja
src/gxt/utils/: __init__.py  hash_utils.py  profiles.py
tests/: conftest.py  test_assignment_sql.py  test_bigquery_adapter.py  test_profiles.py
