[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gxt"
version = "0.1.0"
description = "GTM Experimentation Tool (gxt) - CLI for SQL-based experiment assignments"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "Chad Faulkner" } ]
keywords = ["experiments", "ab-testing", "bigquery", "sql", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",  # A/B testing analysis
  "Topic :: Software Development :: Testing",                 # Experimentation as testing
]
dependencies = [
  "typer[all]>=0.9.0,<1.0.0",
  "Jinja2>=3.0.0,<4.0.0",
  "PyYAML>=6.0,<7.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "google-cloud-bigquery>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-mock>=3.10.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
]
test = [
  "pytest>=7.0.0", 
  "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/chadf66/gtm-experimentation-tool"
Repository = "https://github.com/chadf66/gtm-experimentation-tool"
Issues = "https://github.com/chadf66/gtm-experimentation-tool/issues"

[project.scripts]
# Console script entrypoint that calls the Typer app object in gxt.main
gxt = "gxt.main:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
